# Portal-LauncherH

./: README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/commands/: audio.rs  auth.rs  chat.rs  curseforge.rs  files.rs  friends.rs  instances.rs  jvm.rs  loader_installer.rs  minecraft.rs  mod.rs  modrinth.rs  mods.rs  settings.rs  skins.rs  token_manager.rs  version_manager.rs  voice.rs  webrtc_signaling.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: mod.rs
src-tauri/src/utils/: mod.rs
src/components/layout/: MainLayout.tsx  Sidebar.tsx  TopBar.tsx
src/components/splash/: SplashScreen.tsx
src/i18n/: de.json  en.json  fr.json  index.ts  ru.json  zh.json
src/lib/: theme-engine.ts
src/pages/: DiscoverPage.tsx  FriendsPage.tsx  InstanceSettings.tsx  InstancesPage.tsx  LibraryPage.tsx  ModDetail.tsx  SettingsPage.tsx
src/stores/: languageStore.ts  themeStore.ts
