[package]
name = "portal-launcher"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
keyring = "3"
zip = "2"
sysinfo = "0.31"
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tungstenite = "0.23"
tokio-tungstenite = "0.23"
cpal = "0.15"
rodio = "0.18"
base64 = "0.21"
hex = "0.4"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
thiserror = "1"
tauri-plugin-shell = "2.0.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
